--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,31 +1,27 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
     "configurations": [
-
-        {
-            "name": "Python: test_transformations.py",
-            "type": "python",
-            "request": "launch",
-            "program": "/Users/christianweihsbach/code/deeds-libtorch/deeds_libtorch/test_transformations.py",
-            "console": "integratedTerminal",
-            "env": {
-                "USE_JIT_COMPILE": "1"
-              },
-            "justMyCode": true
-        },
         {
             "name": "Python: Current file",
             "type": "python",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "env": {
-                "USE_JIT_COMPILE": "1"
-              },
-            "justMyCode": true
+        },
+        {
+            "name": "Python: applyBCV",
+            "type": "python",
+            "request": "launch",
+            "program": "./deeds_libtorch/applyBCV.py",
+            "console": "integratedTerminal",
+            "args": ["-M", "file_moving.nii.gz", "-D", "file_deformed.nii.gz", "-O", "./out_data", "-A", "affine_mat.txt"]
+        },
+        {
+            "name": "Python: test_applyBCV",
+            "type": "python",
+            "request": "launch",
+            "program": "./tests/test_applyBCV.py",
+            "console": "integratedTerminal",
+            "args": ["-M", "file_moving.nii.gz", "-D", "file_deformed.nii.gz", "-O", "./out_data", "-A", "affine_mat.txt"]
         }
     ]
 }
