--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,17 @@
 {
     "configurations": [
         {
-            "name": "Python: Current file",
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: test_datacost_d",
+            "type": "python",
+            "request": "launch",
+            "program": "./tests/test_datacost_d.py",
             "console": "integratedTerminal",
         },
         {
@@ -13,15 +20,23 @@
             "request": "launch",
             "program": "./deeds_libtorch/applyBCV.py",
             "console": "integratedTerminal",
-            "args": ["-M", "file_moving.nii.gz", "-D", "file_deformed.nii.gz", "-O", "./out_data", "-A", "affine_mat.txt"]
+            "args": [
+                "-M",
+                "file_moving.nii.gz",
+                "-D",
+                "file_deformed.nii.gz",
+                "-O",
+                "./out_data",
+                "-A",
+                "affine_mat.txt"
+            ]
         },
         {
             "name": "Python: test_applyBCV",
             "type": "python",
             "request": "launch",
-            "program": "./tests/test_applyBCV.py",
+            "program": "./tests/test_apply_bcv.py",
             "console": "integratedTerminal",
-            "args": ["-M", "file_moving.nii.gz", "-D", "file_deformed.nii.gz", "-O", "./out_data", "-A", "affine_mat.txt"]
         }
     ]
 }
