--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ torchvision = "^0.10.1"
 nibabel = "^3.2.1"
 ninja = "^1.10.2"
 tqdm = "^4.62.3"
+jupyterlab = "^3.2.9"
+matplotlib = "^3.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
